zg 18.05.2020 23:28:13 +0300 - build 5603

1. откат 5601.

drkns 18.05.2020 18:13:57 +0100 - build 5602

1. Уточнение 5599.

zg 18.05.2020 17:08:41 +0300 - build 5601

1. экспериментально: новое событие SE_FOLDERCHANGED, приходит асинхронно при смене текущей папки в панелях.

drkns 17.05.2020 17:56:00 +0100 - build 5600

1. Рефакторинг.

2. Тесты.

drkns 16.05.2020 02:22:20 +0100 - build 5599

1. Рефакторинг.

2. Warnings.

drkns 15.05.2020 18:05:22 +0100 - build 5598

1. Запрос имени & пароля при переходам по сетевым путям.

drkns 13.05.2020 23:46:30 +0100 - build 5597

1. Рефакторинг.

2. Уточнения 5592.

3. Warnings.

drkns 04.05.2020 20:12:47 +0300 - build 5596

1. Уточнение 5592.

zg 04.05.2020 14:50:25 +0300 - build 5595

1. с форума: Комбобокс позволяет установить курсор за пределы текста.

MZK 02.05.2020 23:48:24 -0700

1. Перевёл на английский ещё несколько страниц справки far:config.

drkns 02.05.2020 12:56:48 +0300 - build 5594

1. Уточнение 5592.

drkns 02.05.2020 02:54:39 +0300 - build 5593

1. Продолжение 5592 - упрощение копирования файлов и установки атрибутов.

2. Из копирования убрано разрезание файлов.

drkns 30.04.2020 20:15:13 +0300 - build 5592

1. Рефакторинг.

shmuel 23.04.2020 22:40:18 +0200 - build 5591

1. gh-233: Panel.SetPosIdx makes hidden Panel visible

drkns 21.04.2020 20:12:46 +0300 - build 5590

1. В некоторых случаях переключение кодовой страницы могло портить состояние редактора.

drkns 19.04.2020 22:19:47 +0300 - build 5589

1. gh-237: set command is too strict with whitespace

drkns 16.04.2020 20:14:43 +0300 - build 5588

1. Диалог исключения: поиск символов в папке упавшего плагина.

drkns 15.04.2020 22:27:36 +0300 - build 5587

1. Экспериментальное расширение UTF-8 конвертера для поддержки полного диапазона UCS-2, включая непарные суррогаты.

drkns 15.04.2020 02:08:30 +0300 - build 5586

1. Продолжение 5585.

drkns 14.04.2020 22:38:19 +0300 - build 5585
