@@ -1,3 +1,7 @@
+drkns 19.05.2020 20:35:17 +0100 - build 5604
+
+1. gh-242: Far2 CtrlAltShift behavior
+
 zg 18.05.2020 23:28:13 +0300 - build 5603
 
 1. откат 5601.
